2008-05-22  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_c2s.erl: user_send_packet hook now called on all packets
	including presence packets (EJAB-634)

2008-05-22  Badlop  <badlop@process-one.net>

	* README: R12 support: remove compilation warning (EJAB-630)

2008-05-19  Badlop  <badlop@process-one.net>

	* doc/guide.html: Update

	* src/configure.ac: R12 support: remove compilation
	warning (EJAB-630)
	* src/configure: Likewise
	* doc/guide.tex: Likewise

	* doc/guide.tex: Describe how to disable registration
	limitation (EJAB-614)

2008-05-19  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_s2s_out.erl: Avoid an harmless error (function clause in
	logs) 

2008-05-17  Badlop  <badlop@process-one.net>

	* src/extauth.erl: Log strange responses from extauth script. Use
	timeout (EJAB-627)

2008-05-16  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Allow change_state of a room

2008-05-16  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_s2s_out.erl: Change FSMTIMEOUT to 30s

2008-05-12  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Return Forbidden error message
	when user sends private message in a room that disallows
	it (EJAB-595)

	* src/web/ejabberd_http.erl (parse_auth): Allow password that
	include colon character (EJAB-622)

2008-05-09  Mickael Remond <mremond@process-one.net>

	* src/mod_ip_blacklist.erl: Better error handling (EJAB-625).

2008-05-05  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_c2s.erl: Added C2S blacklist support (EJAB-625).
	* src/mod_ip_blacklist.erl: Likewise.
	* src/jlib.erl: Added IP format tuple to string function.
	* src/ejabberd_socket.erl: Properly handled c2s start failure (happen
	for blacklisted IP).

2008-05-04  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_receiver.erl: Don't activate a socket untill its
	receiver process is controlling it

2008-04-30  Christophe Romain <christophe.romain@process-one.net>
